nginx.conf and main.yml updated

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,8 @@ user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
-
+#Hi this is test NGINX file
+#version=1.0.0.0
 events {
         worker_connections 768;
         # multi_accept on;
